2015-11-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.6 released.

2015-11-18  c.hetherington  <cth@carlh.net>

	* Add LUFS / LRA analysis using FFmpeg's ebur128 filter (#368).

2015-11-17  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp for fix to encoded date header in MXF files when
	encoding on Windows (#754).

	* Version 2.5.5 released.

2015-11-17  c.hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix crash when previewing MXFs in some cases.

2015-11-16  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.4 released.

2015-11-15  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Basic support for trusted device lists in KDMs (#750).

2015-11-14  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix various misbehaviours with update checking (#749).

	* Updated fr_FR translation from Thierry Journet.

2015-11-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.3 released.

2015-11-13  c.hetherington  <cth@carlh.net>

	* Vertically align SubRip subtitles with reference to the bottom
	of the screen (#744).

	* Disable YUV->RGB conversion controls with non-YUV sources (#649).

	* Allow multiple recipients of KDM emails (#745).

2015-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.2 released.

2015-11-12  Carl Hetherington  <cth@carlh.net>

	* Extend maximum audio channels to 16 for an experiment.

2015-11-12  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-12  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-11  Carl Hetherington  <cth@carlh.net>

	* Updated pt_PT translation from Tiago Casal Ribeiro.

	* Updated sv_SE translation from Adam Klotblixt.

2015-11-10  Carl Hetherington  <cth@carlh.net>
