@@ -1,3 +1,7 @@
+2015-11-19  c.hetherington  <cth@carlh.net>
+
+	* Add menu option to make a DKDM for DCP-o-matic (#755).
+
 2015-11-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.5.6 released.
